updated at: 2020-03-12 00:02, Failure着用想定 - チャイナドレス(スキニング済) v1.1.0 - S.WORKS - BOOTH

--- a/VRChat/16/1295116.html
+++ b/VRChat/16/1295116.html
@@ -3,30 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>
-      Failure着用想定 - チャイナドレス(スキニング済) v1.0.1 - S.WORKS - BOOTH
+      Failure着用想定 - チャイナドレス(スキニング済) v1.1.0 - S.WORKS - BOOTH
     </title>
     <meta name="description" content=
-    "フェイリアさん着用想定チャイナドレス 2019.04.01 - 説明書更新しました">
+    "フェイリアさん着用想定チャイナドレス 2020.03.12 - Unityのみで完結できるように修正しました">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1295116">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "Failure着用想定 - チャイナドレス(スキニング済) v1.0.1 - S.WORKS - BOOTH">
+    "Failure着用想定 - チャイナドレス(スキニング済) v1.1.0 - S.WORKS - BOOTH">
     <meta name="twitter:description" content=
-    "フェイリアさん着用想定チャイナドレス 2019.04.01 - 説明書更新しました">
+    "フェイリアさん着用想定チャイナドレス 2020.03.12 - Unityのみで完結できるように修正しました">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/a68e6485-c59e-4266-8900-aa6c6e2b5680/i/1295116/ad057816-6393-4bc0-bee2-a0ba26107475_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "Failure着用想定 - チャイナドレス(スキニング済) v1.0.1 - S.WORKS - BOOTH">
+    "Failure着用想定 - チャイナドレス(スキニング済) v1.1.0 - S.WORKS - BOOTH">
     <meta property="og:description" content=
-    "フェイリアさん着用想定チャイナドレス 2019.04.01 - 説明書更新しました">
+    "フェイリアさん着用想定チャイナドレス 2020.03.12 - Unityのみで完結できるように修正しました">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/a68e6485-c59e-4266-8900-aa6c6e2b5680/i/1295116/ad057816-6393-4bc0-bee2-a0ba26107475_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1295116">
+    <meta name="ga:shop" content="UA-160298840-1">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -129,7 +130,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          Failure着用想定 - チャイナドレス(スキニング済) v1.0.1
+                          Failure着用想定 - チャイナドレス(スキニング済) v1.1.0
                         </h2>
                         <div class=
                         "u-text-assertive u-tpg-caption1"></div>
@@ -222,7 +223,7 @@
                           "https://booth.pm/ja/items/1295116"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "Failure着用想定 - チャイナドレス(スキニング済) v1.0.1 | S.WORKS"
+                          "Failure着用想定 - チャイナドレス(スキニング済) v1.1.0 | S.WORKS"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -242,7 +243,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "Failure着用想定 - チャイナドレス(スキニング済) v1.0.1"
+                            "Failure着用想定 - チャイナドレス(スキニング済) v1.1.0"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/a68e6485-c59e-4266-8900-aa6c6e2b5680/i/1295116/ad057816-6393-4bc0-bee2-a0ba26107475_base_resized.jpg">
@@ -252,7 +253,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "Failure着用想定 - チャイナドレス(スキニング済) v1.0.1"
+                            "Failure着用想定 - チャイナドレス(スキニング済) v1.1.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/a68e6485-c59e-4266-8900-aa6c6e2b5680/i/1295116/4ae5519b-80d9-4c46-b77c-87e70d32690b_base_resized.jpg">
@@ -262,7 +263,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "Failure着用想定 - チャイナドレス(スキニング済) v1.0.1"
+                            "Failure着用想定 - チャイナドレス(スキニング済) v1.1.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/a68e6485-c59e-4266-8900-aa6c6e2b5680/i/1295116/53ac5a68-1b6b-43fe-b0fd-d06b7b1c0f93_base_resized.jpg">
@@ -272,7 +273,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "Failure着用想定 - チャイナドレス(スキニング済) v1.0.1"
+                            "Failure着用想定 - チャイナドレス(スキニング済) v1.1.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/a68e6485-c59e-4266-8900-aa6c6e2b5680/i/1295116/ac2dfc24-4b62-4e3b-a4b1-c5cc7ab5ffa9_base_resized.jpg">
@@ -303,8 +304,8 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            フェイリアさん着用想定チャイナドレス 2019.04.01 -
-                            説明書更新しました
+                            フェイリアさん着用想定チャイナドレス 2020.03.12 -
+                            Unityのみで完結できるように修正しました
                           </p>
                         </div>
                       </section>
@@ -342,6 +343,17 @@
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
                             href=
+                            "https://booth.pm/ja/search/3D%E7%94%A8%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                3D用オブジェクト
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
                             "https://booth.pm/ja/search/3D%E7%94%A8%E3%83%86%E3%82%AF%E3%82%B9%E3%83%81%E3%83%A3">
                             <div class="search-guide-tablet-label">
                               <div class=
@@ -358,6 +370,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 3Dキャラクター用装飾
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%83%95%E3%82%A7%E3%82%A4%E3%83%AA%E3%82%A2%E3%81%95%E3%82%93">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                フェイリアさん
                               </div>
                             </div></a>
                           </div>
