--- a/VRChat/97/1292897.html
+++ b/VRChat/97/1292897.html
@@ -241,7 +241,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/ojnAgrNNRZc"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
