--- a/VRChat/28/1289728.html
+++ b/VRChat/28/1289728.html
@@ -296,7 +296,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/QkS117zSBds"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
