updated at: 2020-03-12 00:19, カラーチェンジシェーダー&amp;カラーチェンジサイリウム - ゆうすのお店 @yuusultultu - BOOTH

--- a/VRChat/90/1287890.html
+++ b/VRChat/90/1287890.html
@@ -431,7 +431,8 @@
                             <iframe width="512" height="384" src=
                             "https://www.youtube.com/embed/Va41OSOGoRw"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
