updated at: 2020-03-12 00:24, [3Dモデル]くらげリウム - boldo倉庫 - BOOTH

--- a/VRChat/32/1286032.html
+++ b/VRChat/32/1286032.html
@@ -245,7 +245,8 @@
                             <iframe width="834" height="447" src=
                             "https://www.youtube.com/embed/QhuLfimQGTI"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
