--- a/VRChat/37/1278937.html
+++ b/VRChat/37/1278937.html
@@ -231,7 +231,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/3j9457LVCqY"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
