--- a/VRChat/19/1272719.html
+++ b/VRChat/19/1272719.html
@@ -311,7 +311,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/tJF9JBp2YQI"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
