--- a/VRChat/71/1264971.html
+++ b/VRChat/71/1264971.html
@@ -226,7 +226,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/hJh0C8RGWd4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
