--- a/VRChat/42/1264642.html
+++ b/VRChat/42/1264642.html
@@ -257,7 +257,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/xG6xXnW91M4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
