--- a/VRChat/27/1261627.html
+++ b/VRChat/27/1261627.html
@@ -256,7 +256,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/vxZqF_CsR4E"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
