updated at: 2020-03-12 01:59, 00 Eve イヴ　　Humanoid形式　VRChat用オリジナル3Dモデル　Quest未対応 - HAMELN - BOOTH

--- a/VRChat/76/1256576.html
+++ b/VRChat/76/1256576.html
@@ -259,7 +259,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/-jzAgG-93Ss"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -268,7 +269,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/PU4qoCKrgqg"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -277,7 +279,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/Q-wo2bHxVpU"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -286,7 +289,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/nC37F6hohoQ"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
