updated at: 2020-03-12 02:02, 【VRChat向け】3Dモデル サイバー風セイバーver2 N-O-S-02 NoiseSaber - オオヌエプラント - BOOTH

--- a/VRChat/32/1255832.html
+++ b/VRChat/32/1255832.html
@@ -248,7 +248,8 @@
                             <iframe width="706" height="397" src=
                             "https://www.youtube.com/embed/o63OKEp7Mug?list=PLI-jb0kMBfpDeJSlQCjC93hn191jocV1g"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
