--- a/VRChat/96/1255096.html
+++ b/VRChat/96/1255096.html
@@ -297,7 +297,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/UjyiEyw_tHQ"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
