--- a/VRChat/72/1242972.html
+++ b/VRChat/72/1242972.html
@@ -246,7 +246,8 @@
                             <iframe width="834" height="447" src=
                             "https://www.youtube.com/embed/PlQp72b93fY"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
