--- a/VRChat/69/1239469.html
+++ b/VRChat/69/1239469.html
@@ -248,7 +248,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/CqebUzf73Kc"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -257,7 +258,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/BHYvwSuRkx4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
