--- a/VRChat/44/1228444.html
+++ b/VRChat/44/1228444.html
@@ -241,7 +241,8 @@
                             <iframe width="789" height="444" src=
                             "https://www.youtube.com/embed/vUrHpgwO0zw"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
