--- a/VRChat/17/1139517.html
+++ b/VRChat/17/1139517.html
@@ -259,7 +259,8 @@
                             <iframe width="555" height="360" src=
                             "https://www.youtube.com/embed/k_OoNeOB1JA"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
