--- a/VRChat/06/1228706.html
+++ b/VRChat/06/1228706.html
@@ -246,7 +246,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/9ETgfR5qJVg"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
