--- a/VRChat/11/1224211.html
+++ b/VRChat/11/1224211.html
@@ -245,7 +245,8 @@
                             <iframe width="1195" height="672" src=
                             "https://www.youtube.com/embed/oGv4Eq-Snh0"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
