--- a/VRChat/42/1221542.html
+++ b/VRChat/42/1221542.html
@@ -248,7 +248,8 @@
                             <iframe width="706" height="397" src=
                             "https://www.youtube.com/embed/o63OKEp7Mug?list=PLI-jb0kMBfpDeJSlQCjC93hn191jocV1g"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
