--- a/VRChat/32/1380532.html
+++ b/VRChat/32/1380532.html
@@ -248,7 +248,8 @@
                             <iframe width="640" height="360" src=
                             "https://www.youtube.com/embed/vd79XWrwPCk"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
