--- a/VRChat/68/1379468.html
+++ b/VRChat/68/1379468.html
@@ -246,7 +246,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/6gxhTQNwIQ0"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -255,7 +256,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/4148SeTh-pg"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
