--- a/VRChat/52/1378552.html
+++ b/VRChat/52/1378552.html
@@ -312,7 +312,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/fE6HVY4htvU"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
