--- a/VRChat/10/1213910.html
+++ b/VRChat/10/1213910.html
@@ -313,7 +313,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/r9A0hYO0VZ4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
