--- a/VRChat/75/1211475.html
+++ b/VRChat/75/1211475.html
@@ -257,7 +257,8 @@
                             <iframe width="560" height="420" src=
                             "https://www.youtube.com/embed/WHRpZAqoRsA"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
