updated at: 2020-03-12 15:33, 【ビームサーベル】【ライトセーバー】84式ビームソード【屈折・トレイル・音・アニメーション・光・煙・火花・穴】【自作Shad - BOOTH

--- a/VRChat/80/1207880.html
+++ b/VRChat/80/1207880.html
@@ -246,7 +246,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/nuiU6AZxBRc"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -255,7 +256,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/ZlmUrfhULW4"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
