updated at: 2020-03-12 15:35, QRCodeListerer Ver. 0.0.1.6 - クレウスのショップ - BOOTH

--- a/VRChat/14/1203814.html
+++ b/VRChat/14/1203814.html
@@ -313,7 +313,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/4FNpHE5aUNo"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
