updated at: 2020-03-12 15:45, 【VRChat向け】掴んだ紐に載せられるヨーヨー - いすぃのお店 - BOOTH

--- a/VRChat/99/1196299.html
+++ b/VRChat/99/1196299.html
@@ -244,7 +244,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/b14YwCYbN0c"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
@@ -253,7 +254,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/uqrlCU1RH1Q"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
