--- a/VRChat/80/1196080.html
+++ b/VRChat/80/1196080.html
@@ -258,7 +258,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/G7f-2B_KEGI"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
