--- a/VRChat/02/1172702.html
+++ b/VRChat/02/1172702.html
@@ -310,7 +310,8 @@
                             <iframe width="560" height="315" src=
                             "https://www.youtube.com/embed/rUPIyPTbO6E"
                             frameborder="0" allowfullscreen
-                            ></iframe>
+                            sandbox="allow-scripts allow-same-origin allow-popups">
+                            </iframe>
                           </div>
                         </div>
                         <div>
