--- a/VRChat/47/1156347.html
+++ b/VRChat/47/1156347.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1156347/1386c78b-40da-47b2-a23b-a2e41dec6782_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1156347">
+    <meta name="ga:shop" content="UA-160372433-1">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
