updated at: 2020-03-12 16:52, 【UnityPackage】十字架 - MGR雑貨店 - BOOTH

--- a/VRChat/61/1154661.html
+++ b/VRChat/61/1154661.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1154661/c91a38ec-5f0c-4be8-8fb9-0f8e2b0d683f_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1154661">
+    <meta name="ga:shop" content="UA-160372433-1">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
