updated at: 2020-03-12 17:00, 【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂の倉庫 - BOOTH

--- a/VRChat/34/1362334.html
+++ b/VRChat/34/1362334.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂のちょっといいお店 - BOOTH
+      【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂の倉庫 - BOOTH
     </title>
     <meta name="description" content=
     "【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　有坂みと ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。 ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。 ◆ある異世界のミスリル鉱石でできた直剣/短剣です。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂のちょっといいお店 - BOOTH">
+    "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂の倉庫 - BOOTH">
     <meta name="twitter:description" content=
     "【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　有坂みと ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。 ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。 ◆ある異世界のミスリル鉱石でできた直剣/短剣です。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1ae5d9f5-29a4-4574-ab86-a316c22db92a/i/1362334/7032d426-6367-45c7-856b-0b7716dd220d_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂のちょっといいお店 - BOOTH">
+    "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 - 有坂の倉庫 - BOOTH">
     <meta property="og:description" content=
     "【オリジナル3Dモデル】ミスリルソード/ダガー 制作者　有坂みと ◆VRChat向けセットアップ済みのデータとなりますが、UnityやUE4をはじめ他のソフトウェアでもお使いいただけます。 ◆ご購入の前に以下の利用規約をお読みいただき、ご了承された上でのご購入をお願いいたします。 ◆ある異世界のミスリル鉱石でできた直剣/短剣です。">
     <meta property="og:image" content=
@@ -119,11 +119,11 @@
                           href="https://mk22.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="有坂のちょっといいお店" class=
+                            <img alt="有坂の倉庫" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/694586/icon_image/f22b6311-80c6-4086-847d-1700573e328d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              有坂のちょっといいお店
+                              有坂の倉庫
                             </div>
                           </div></a>
                         </div>
@@ -222,7 +222,7 @@
                           "https://booth.pm/ja/items/1362334"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 | 有坂のちょっといいお店"
+                          "【オリジナル３Dモデル】ミスリルソード/ダガー ver.1.0.0 | 有坂の倉庫"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
