updated at: 2020-03-12 17:08, VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH

--- a/VRChat/27/1354727.html
+++ b/VRChat/27/1354727.html
@@ -406,17 +406,10 @@
                             不必要なパーツは非表示または削除でご使用下さい。
                             参考記事「BOOTHで購入したモデルをVRChatに入れてみた！！」
                             https://keiki002.com/vr/booth-vrchat/
-                            ---------------
-                            ■概要・利用規約は以下のリンクからご確認下さい。
+                            --------------- 【概要欄 / Outline / 大纲】
                             https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing
-                            ■This is a 3D model "太田黒-Otaguro-" that
-                            assumes a avatar of VRChat. Please
-                            check the outline and guidelines from
-                            the link below.
-                            https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing
-                            ■这是一个3D模型“太田黒-Otaguro-”，假设VRChat的化身。
-                            请从以下链接查看大纲和指南。
-                            https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing
+                            【利用規約 / Guidelines / 指南】
+                            https://docs.google.com/document/d/1cgFf44stt8fllE1sSMFHcyCD3fw77FLybGzd-VsEp9s/edit?usp=sharing
                           </p>
                         </div>
                       </section>
