--- a/VRChat/57/1130457.html
+++ b/VRChat/57/1130457.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1130457/50d405f4-e530-4c5e-b4c3-09da31a59f65_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1130457">
+    <meta name="ga:shop" content="UA-160372433-1">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
