--- a/VRChat/09/1076309.html
+++ b/VRChat/09/1076309.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1076309/dcd17dfb-b81c-4610-bc8c-02fb623aa422_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1076309">
+    <meta name="ga:shop" content="UA-160372433-1">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
