updated at: 2020-03-13 00:31, 【無料】令和【UnityPackage】 - MGR雑貨店 - BOOTH

--- a/VRChat/29/1298529.html
+++ b/VRChat/29/1298529.html
@@ -24,6 +24,7 @@
     "https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1298529/9fc99f67-f838-4612-9f4f-1a475d327cca_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1298529">
+    <meta name="ga:shop" content="UA-160372433-1">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
