updated at: 2020-03-13 00:39, 顔芸先輩式・乖離剣エア - Royal・Fragment - BOOTH

--- a/VRChat/85/1294185.html
+++ b/VRChat/85/1294185.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      顔芸先輩式・乖離剣エア - Loyal・Fragment - BOOTH
+      顔芸先輩式・乖離剣エア - Royal・Fragment - BOOTH
     </title>
     <meta name="description" content=
     "-------------------------------------------------------------------- 『顔芸先輩式・乖離剣エア』ver1.0 利用規約 -------------------------------------------------------------------- この度は、『顔芸先輩式・乖離剣エア』をご覧頂き誠に有難うございます。 モデルを使う際は以下にご注意ください。 -------------------------------------------------------------------- ■動作環境について">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "顔芸先輩式・乖離剣エア - Loyal・Fragment - BOOTH">
+    "顔芸先輩式・乖離剣エア - Royal・Fragment - BOOTH">
     <meta name="twitter:description" content=
     "-------------------------------------------------------------------- 『顔芸先輩式・乖離剣エア』ver1.0 利用規約 -------------------------------------------------------------------- この度は、『顔芸先輩式・乖離剣エア』をご覧頂き誠に有難うございます。 モデルを使う際は以下にご注意ください。 -------------------------------------------------------------------- ■動作環境について">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/94c20b3d-fc21-4e25-9bc8-06b8eaba8e71/i/1294185/2db247da-a5b2-47cd-b234-ee8c7960d4b3_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "顔芸先輩式・乖離剣エア - Loyal・Fragment - BOOTH">
+    "顔芸先輩式・乖離剣エア - Royal・Fragment - BOOTH">
     <meta property="og:description" content=
     "-------------------------------------------------------------------- 『顔芸先輩式・乖離剣エア』ver1.0 利用規約 -------------------------------------------------------------------- この度は、『顔芸先輩式・乖離剣エア』をご覧頂き誠に有難うございます。 モデルを使う際は以下にご注意ください。 -------------------------------------------------------------------- ■動作環境について">
     <meta property="og:image" content=
@@ -119,11 +119,11 @@
                           href="https://mktkakumei.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="Loyal・Fragment" class=
+                            <img alt="Royal・Fragment" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2509652/icon_image/ab84ca6b-9ba7-4312-9870-4ff6a34970a0_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              Loyal・Fragment
+                              Royal・Fragment
                             </div>
                           </div></a>
                         </div>
@@ -340,7 +340,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1294185"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="顔芸先輩式・乖離剣エア | Loyal・Fragment"
+                          data-text="顔芸先輩式・乖離剣エア | Royal・Fragment"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
