updated at: 2020-03-13 01:52, 簡易型卒業証書入れ - Royal・Fragment - BOOTH

--- a/VRChat/04/1264904.html
+++ b/VRChat/04/1264904.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      簡易型卒業証書入れ - Loyal・Fragment - BOOTH
+      簡易型卒業証書入れ - Royal・Fragment - BOOTH
     </title>
     <meta name="description" content=
     "VRchatでの使用を想定した調簡易型のアークトゥーンシェーダーを使った卒業証書入れです。 Unityゲームでのアイテムや、撮影用とかにお使いください。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "簡易型卒業証書入れ - Loyal・Fragment - BOOTH">
+    "簡易型卒業証書入れ - Royal・Fragment - BOOTH">
     <meta name="twitter:description" content=
     "VRchatでの使用を想定した調簡易型のアークトゥーンシェーダーを使った卒業証書入れです。 Unityゲームでのアイテムや、撮影用とかにお使いください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/94c20b3d-fc21-4e25-9bc8-06b8eaba8e71/i/1264904/b5e4170a-8a5c-430c-955e-a425d1210460_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "簡易型卒業証書入れ - Loyal・Fragment - BOOTH">
+    "簡易型卒業証書入れ - Royal・Fragment - BOOTH">
     <meta property="og:description" content=
     "VRchatでの使用を想定した調簡易型のアークトゥーンシェーダーを使った卒業証書入れです。 Unityゲームでのアイテムや、撮影用とかにお使いください。">
     <meta property="og:image" content=
@@ -119,11 +119,11 @@
                           href="https://mktkakumei.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="Loyal・Fragment" class=
+                            <img alt="Royal・Fragment" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2509652/icon_image/ab84ca6b-9ba7-4312-9870-4ff6a34970a0_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              Loyal・Fragment
+                              Royal・Fragment
                             </div>
                           </div></a>
                         </div>
@@ -275,7 +275,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1264904"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="簡易型卒業証書入れ | Loyal・Fragment"
+                          data-text="簡易型卒業証書入れ | Royal・Fragment"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
