--- a/VRChat/92/1366192.html
+++ b/VRChat/92/1366192.html
@@ -6,7 +6,7 @@
       ジェムアクセサリー - ice-room - BOOTH
     </title>
     <meta name="description" content=
-    "[ジェムアクセサリー 紹介文] シンプル寄りのアクセサリーです。 ちょっとしたアクセントなどにどうぞ。 ボーンをいれてあるので揺らしたり紐を少し曲げたりできます。 テクスチャ等は設定されていないのでジェムシェーダー等で設定すると綺麗になると思います。 [内容物] ・jem.fbx △255 フリー版と有料版の内容物は同じものです。 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
+    "[ジェムアクセサリー 紹介文] シンプル寄りのアクセサリーです。 ちょっとしたアクセントなどにどうぞ。 ボーンをいれてあるので揺らしたり紐を少し曲げたりできます。 テクスチャ等は設定されていないのでジェムシェーダー等で設定すると綺麗になると思います。 [内容物] ・jem.fbx △255 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1366192">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "ジェムアクセサリー - ice-room - BOOTH">
     <meta name="twitter:description" content=
-    "[ジェムアクセサリー 紹介文] シンプル寄りのアクセサリーです。 ちょっとしたアクセントなどにどうぞ。 ボーンをいれてあるので揺らしたり紐を少し曲げたりできます。 テクスチャ等は設定されていないのでジェムシェーダー等で設定すると綺麗になると思います。 [内容物] ・jem.fbx △255 フリー版と有料版の内容物は同じものです。 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
+    "[ジェムアクセサリー 紹介文] シンプル寄りのアクセサリーです。 ちょっとしたアクセントなどにどうぞ。 ボーンをいれてあるので揺らしたり紐を少し曲げたりできます。 テクスチャ等は設定されていないのでジェムシェーダー等で設定すると綺麗になると思います。 [内容物] ・jem.fbx △255 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/01b2c36e-ce95-4d9b-aac7-e49dbbc88cd3/i/1366192/59488984-a90a-4d82-a392-1769427e6156_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "ジェムアクセサリー - ice-room - BOOTH">
     <meta property="og:description" content=
-    "[ジェムアクセサリー 紹介文] シンプル寄りのアクセサリーです。 ちょっとしたアクセントなどにどうぞ。 ボーンをいれてあるので揺らしたり紐を少し曲げたりできます。 テクスチャ等は設定されていないのでジェムシェーダー等で設定すると綺麗になると思います。 [内容物] ・jem.fbx △255 フリー版と有料版の内容物は同じものです。 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
+    "[ジェムアクセサリー 紹介文] シンプル寄りのアクセサリーです。 ちょっとしたアクセントなどにどうぞ。 ボーンをいれてあるので揺らしたり紐を少し曲げたりできます。 テクスチャ等は設定されていないのでジェムシェーダー等で設定すると綺麗になると思います。 [内容物] ・jem.fbx △255 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/01b2c36e-ce95-4d9b-aac7-e49dbbc88cd3/i/1366192/59488984-a90a-4d82-a392-1769427e6156_base_resized.jpg">
     <meta property="og:url" content=
@@ -78,7 +78,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="ice-room" data-product-category="17"
         data-product-id="1366192" data-product-list="market_show"
-        data-product-price="100" data-tracking="detail_item">
+        data-product-price="120" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -162,65 +162,13 @@
                                   <div class=
                                   "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
                                     <div class=
-                                    "variation-name u-text-wrap">
-                                      フリー版
-                                    </div>
-                                    <div class=
                                     "u-tpg-caption1 u-text-gray-300">
                                       ダウンロード商品
                                     </div>
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 0
-                                  </div>
-                                </div>
-                                <div class="variation-cart">
-                                  <div class="cart-button-wrap">
-                                    <a class=
-                                    "btn add-cart full-length"
-                                    title="ジェムアクセサリー.zip" href=
-                                    "https://booth.pm/downloadables/591481">
-                                    <div class="u-d-block">
-                                      <span class=
-                                      "cmd-label">無料ダウンロード</span>
-                                    </div>
-                                    <div class=
-                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
-                                      <div class=
-                                      "u-text-ellipsis u-max-w-50">
-                                        ジェムアクセサリー
-                                      </div>
-                                      <div>
-                                        .zip
-                                      </div>
-                                      <div>
-                                        &nbsp;(16.2 KB)
-                                      </div>
-                                    </div></a>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </li>
-                          <li class="variation-item u-border-t">
-                            <div class="u-d-flex">
-                              <div class="u-flex-1 u-min-w-0">
-                                <div class="u-d-flex">
-                                  <div class=
-                                  "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
-                                    <div class=
-                                    "variation-name u-text-wrap">
-                                      投げ銭用
-                                    </div>
-                                    <div class=
-                                    "u-tpg-caption1 u-text-gray-300">
-                                      ダウンロード商品
-                                    </div>
-                                  </div>
-                                  <div class=
-                                  "variation-price u-text-right">
-                                    ¥ 100
+                                    ¥ 120
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -233,7 +181,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1366192"
-                                      data-product-price="100"
+                                      data-product-price="120"
                                       data-product-brand="ice-room"
                                       data-product-category="17"
                                       data-product-variant=
@@ -249,7 +197,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1366192"
-                                        data-product-price="100"
+                                        data-product-price="120"
                                         data-product-brand=
                                         "ice-room"
                                         data-product-category="17"
@@ -342,8 +290,7 @@
                             ちょっとしたアクセントなどにどうぞ。
                             ボーンをいれてあるので揺らしたり紐を少し曲げたりできます。
                             テクスチャ等は設定されていないのでジェムシェーダー等で設定すると綺麗になると思います。
-                            [内容物] ・jem.fbx △255
-                            フリー版と有料版の内容物は同じものです。 [利用について]
+                            [内容物] ・jem.fbx △255 [利用について]
                             ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。
                             ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。
                             ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。
