updated at: 2020-03-13 17:07, VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH

--- a/VRChat/27/1354727.html
+++ b/VRChat/27/1354727.html
@@ -6,7 +6,7 @@
       VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH
     </title>
     <meta name="description" content=
-    "VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。 ※最新バージョン：Otaguro_30ko(Misoko)_1.0.1 --------------- 【内容物】 ・FBXファイル（素体付きUnity Package） ・テクスチャ編集用psdファイル×5 ・改変用Blendファイル×1 ※このモデルの髪のパーツには一部VRoid Studioで制作したものが含まれています。 --------------- 【ファイルの仕様】 ・バージョン : 1.0.1 ・データ形式 : fbx ・ポリゴン数 : 19,525（素体無し） ・ボーン : あり（Humanoid Rig">
+    "【概要欄 / Outline / 大纲】 https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing 【利用規約 / Guidelines / 指南 / 이용약관】 https://docs.google.com/document/d/1cgFf44stt8fllE1sSMFHcyCD3fw77FLybGzd-VsEp9s/edit?usp=sharing --------------- 以下、概要欄（日本語）から一部抜粋">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1354727">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。 ※最新バージョン：Otaguro_30ko(Misoko)_1.0.1 --------------- 【内容物】 ・FBXファイル（素体付きUnity Package） ・テクスチャ編集用psdファイル×5 ・改変用Blendファイル×1 ※このモデルの髪のパーツには一部VRoid Studioで制作したものが含まれています。 --------------- 【ファイルの仕様】 ・バージョン : 1.0.1 ・データ形式 : fbx ・ポリゴン数 : 19,525（素体無し） ・ボーン : あり（Humanoid Rig">
+    "【概要欄 / Outline / 大纲】 https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing 【利用規約 / Guidelines / 指南 / 이용약관】 https://docs.google.com/document/d/1cgFf44stt8fllE1sSMFHcyCD3fw77FLybGzd-VsEp9s/edit?usp=sharing --------------- 以下、概要欄（日本語）から一部抜粋">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/af1e37f4-64de-41e0-83b3-ea6ffc69265d/i/1354727/d3a98e86-4818-4a38-a1cf-f66425ec3aea_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRChatアバター想定3Dモデル「太田黒-Otaguro-」 - 梅干大好きっ子クラブ - BOOTH">
     <meta property="og:description" content=
-    "VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。 ※最新バージョン：Otaguro_30ko(Misoko)_1.0.1 --------------- 【内容物】 ・FBXファイル（素体付きUnity Package） ・テクスチャ編集用psdファイル×5 ・改変用Blendファイル×1 ※このモデルの髪のパーツには一部VRoid Studioで制作したものが含まれています。 --------------- 【ファイルの仕様】 ・バージョン : 1.0.1 ・データ形式 : fbx ・ポリゴン数 : 19,525（素体無し） ・ボーン : あり（Humanoid Rig">
+    "【概要欄 / Outline / 大纲】 https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing 【利用規約 / Guidelines / 指南 / 이용약관】 https://docs.google.com/document/d/1cgFf44stt8fllE1sSMFHcyCD3fw77FLybGzd-VsEp9s/edit?usp=sharing --------------- 以下、概要欄（日本語）から一部抜粋">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/af1e37f4-64de-41e0-83b3-ea6ffc69265d/i/1354727/d3a98e86-4818-4a38-a1cf-f66425ec3aea_base_resized.jpg">
     <meta property="og:url" content=
@@ -387,6 +387,11 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            【概要欄 / Outline / 大纲】
+                            https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing
+                            【利用規約 / Guidelines / 指南 / 이용약관】
+                            https://docs.google.com/document/d/1cgFf44stt8fllE1sSMFHcyCD3fw77FLybGzd-VsEp9s/edit?usp=sharing
+                            --------------- 以下、概要欄（日本語）から一部抜粋
                             VRChatアバター想定3Dモデル「太田黒-Otaguro-」です。
                             ※最新バージョン：Otaguro_30ko(Misoko)_1.0.1
                             --------------- 【内容物】
@@ -406,10 +411,6 @@
                             不必要なパーツは非表示または削除でご使用下さい。
                             参考記事「BOOTHで購入したモデルをVRChatに入れてみた！！」
                             https://keiki002.com/vr/booth-vrchat/
-                            --------------- 【概要欄 / Outline / 大纲】
-                            https://docs.google.com/document/d/1IYDthPaDov4eRX2hsK8imauIkuZi4Lif97pNosQjN5s/edit?usp=sharing
-                            【利用規約 / Guidelines / 指南】
-                            https://docs.google.com/document/d/1cgFf44stt8fllE1sSMFHcyCD3fw77FLybGzd-VsEp9s/edit?usp=sharing
                           </p>
                         </div>
                       </section>
