--- a/VRChat/24/1111224.html
+++ b/VRChat/24/1111224.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH
+      亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH
     </title>
     <meta name="description" content=
     "『霊生を謳歌する悪霊』がコンセプトのオリジナル3Dモデルです。 VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku ☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353 ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ReflexShader2.0 ・DynamicBone ℹVRChatへのアバターアップロード手順：">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta name="twitter:description" content=
     "『霊生を謳歌する悪霊』がコンセプトのオリジナル3Dモデルです。 VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku ☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353 ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ReflexShader2.0 ・DynamicBone ℹVRChatへのアバターアップロード手順：">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1111224/6f150615-939b-481b-a716-5b83fe1e9659_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta property="og:description" content=
     "『霊生を謳歌する悪霊』がコンセプトのオリジナル3Dモデルです。 VRMファイル付き！ SNS推奨ハッシュタグ: #RyokoAku ☑obakeムーブとは: https://twitter.com/NamaeWatashino/status/1092789099650404353 ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ReflexShader2.0 ・DynamicBone ℹVRChatへのアバターアップロード手順：">
     <meta property="og:image" content=
@@ -133,11 +133,11 @@
                           href="https://namaewatashino.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="渡篠処（わたしのところ）" class=
+                            <img alt="渡篠処 BOOTH拠点" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1619820/icon_image/de1bd578-6db6-4049-a895-6a64be2d4d97_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              渡篠処（わたしのところ）
+                              渡篠処 BOOTH拠点
                             </div>
                           </div></a>
                         </div>
@@ -238,7 +238,7 @@
                           "https://booth.pm/ja/items/1111224"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 | 渡篠処（わたしのところ）"
+                          "亜久涼子(アクリョーコ) / Ryoko Aku【3Dモデル】 | 渡篠処 BOOTH拠点"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
