updated at: 2020-03-13 21:36, 禁忌事務ノ魔導書 / Grimoir Kinkijim【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH

--- a/VRChat/23/1011023.html
+++ b/VRChat/23/1011023.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      禁忌事務ノ魔導書 / Grimoir Kinkijim【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH
+      禁忌事務ノ魔導書 / Grimoir Kinkijim【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH
     </title>
     <meta name="description" content=
     "⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ユニティちゃんトゥーンシェーダー2.0 / UTS2 【魔法陣シェーダーについて】 Githubでも公開中です。同梱物より最新になる可能性があります。 https://github.com/NamaeWatashino/MagicCircleShader - - - ⚠Required asset⚠ You need these assets. ・Unity-chan Toon Shader 2.0 【About Magic Circle Shader】 It is also">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "禁忌事務ノ魔導書 / Grimoir Kinkijim【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "禁忌事務ノ魔導書 / Grimoir Kinkijim【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta name="twitter:description" content=
     "⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ユニティちゃんトゥーンシェーダー2.0 / UTS2 【魔法陣シェーダーについて】 Githubでも公開中です。同梱物より最新になる可能性があります。 https://github.com/NamaeWatashino/MagicCircleShader - - - ⚠Required asset⚠ You need these assets. ・Unity-chan Toon Shader 2.0 【About Magic Circle Shader】 It is also">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1011023/3fa04610-2364-4254-8ecb-01a3e2ac5be3_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "禁忌事務ノ魔導書 / Grimoir Kinkijim【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "禁忌事務ノ魔導書 / Grimoir Kinkijim【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta property="og:description" content=
     "⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ユニティちゃんトゥーンシェーダー2.0 / UTS2 【魔法陣シェーダーについて】 Githubでも公開中です。同梱物より最新になる可能性があります。 https://github.com/NamaeWatashino/MagicCircleShader - - - ⚠Required asset⚠ You need these assets. ・Unity-chan Toon Shader 2.0 【About Magic Circle Shader】 It is also">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://namaewatashino.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="渡篠処（わたしのところ）" class=
+                            <img alt="渡篠処 BOOTH拠点" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1619820/icon_image/de1bd578-6db6-4049-a895-6a64be2d4d97_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              渡篠処（わたしのところ）
+                              渡篠処 BOOTH拠点
                             </div>
                           </div></a>
                         </div>
@@ -226,7 +226,7 @@
                           "https://booth.pm/ja/items/1011023"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "禁忌事務ノ魔導書 / Grimoir Kinkijim【3Dモデル】 | 渡篠処（わたしのところ）"
+                          "禁忌事務ノ魔導書 / Grimoir Kinkijim【3Dモデル】 | 渡篠処 BOOTH拠点"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
